# Photo-storage-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  README.md  api.txt  dbm.cpp  docker-compose.yaml  ex.cpp  main.cpp  requirements.txt
